--- a/templates/templates/shortener/index.html.twig
+++ b/templates/templates/shortener/index.html.twig
@@ -9,12 +9,7 @@
 </style>
 
 <div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>/srv/src/app/src/Controller/ShortenerController.php</code></li>
-        <li>Your template at <code>/srv/src/app/templates/shortener/index.html.twig</code></li>
-    </ul>
+    <h1>Результат: </h1>
+    {{ result }}
 </div>
 {% endblock %}
