--- a/templates/auth/register.html.twig
+++ b/templates/auth/register.html.twig
@@ -5,18 +5,15 @@
 {% block body %}
     <h1>Register</h1>
 
-    {#{{ form_errors(registrationForm) }}
-
-    {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.email) }}
-        {{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
-        }) }}
-        {{ form_row(registrationForm.agreeTerms) }}
-
+    <form method="post" action="{{ path('app_register') }}">
+        <div>
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
+        </div>
+        <div>
+            <label for="plainPassword">Password:</label>
+            <input type="password" id="plainPassword" name="plainPassword" required>
+        </div>
         <button type="submit" class="btn">Register</button>
-    {{ form_end(registrationForm) }}#}
-
-
-    {{ form(registrationForm) }}
+    </form>
 {% endblock %}
