--- a/templates/shortener/show_info.html.twig
+++ b/templates/shortener/show_info.html.twig
@@ -1,15 +1,18 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ShortenerController!{% endblock %}
+{% block title %}Shortener Info{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+    <div class="container">
+        <h1>Shortener Info</h1>
 
-<div class="example-wrapper">
-    <h1>Результат: </h1>
-    {{ result }}
-</div>
+        <div class="card mb-3">
+            <div class="card-body">
+                <h5 class="card-title">Code: {{ shortener.code }}</h5>
+                <p class="card-text">URL: <a href="{{ shortener.url }}">{{ shortener.url }}</a></p>
+                <p class="card-text">User: {{ shortener.user.email }}</p>
+                <p class="card-text">Redirect Count: {{ shortener.count }}</p>
+            </div>
+        </div>
+    </div>
 {% endblock %}
