--- a/templates/shortener/user_codes.html.twig
+++ b/templates/shortener/user_codes.html.twig
@@ -1,17 +1,44 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ShortenerController!{% endblock %}
+{% block title %}Shortened URLs{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+    <div class="container">
+        <h1>Shortened URLs</h1>
 
-<div class="example-wrapper">
-    <h1>Результат: </h1>
-    {% for shortener_list in short %}
-        {{ short.code }} - {{ short.url }}
-    {% endfor %}
-</div>
+        {# Форма для кодирования URL #}
+        <form action="{{ path('shortener_encode') }}" method="post" class="mb-4">
+            <label class="input-group">
+                <input type="text" name="url" class="form-control" placeholder="Enter URL to shorten">
+                <button type="submit" class="btn btn-primary">Shorten</button>
+            </label>
+        </form>
+
+        {# Таблица с кодами #}
+        <table class="table">
+            <thead>
+            <tr>
+                <th>Icon</th>
+                <th>Code</th>
+                <th>URL</th>
+                <th>VISIT</th>
+                <th>Actions</th>
+            </tr>
+            </thead>
+            <tbody>
+            {% for shortener in shortener_list %}
+                <tr>
+                    <td><img src="{{ favicon_url(shortener.url) }}" alt="Favicon" style="width: 24px; height: 24px;"></td>
+                    <td>{{ shortener.code }}</td>
+                    <td>{{ shortener.url }}</td>
+                    <td>{{ shortener.count }}</td>
+                    <td>
+                        <a href="{{ path('shortener_redirect', {'code': shortener.code}) }}" target="_blank" class="btn btn-sm btn-primary">Go</a>
+                        <a href="{{ path('shortener_info', {'shortener': shortener.id}) }}" target="_blank" class="btn btn-sm btn-info">Info</a>
+                    </td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+    </div>
 {% endblock %}
